--- a/app/src/main/res/layout-land/main.xml
+++ b/app/src/main/res/layout-land/main.xml
@@ -1,17 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<FrameLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/topLayout"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:orientation="vertical"
-    tools:context="com.hrawat.projectvision.faceDetection.FaceTrackerActivity">
+    android:layout_height="match_parent"
+    android:keepScreenOn="true"
+    android:orientation="vertical">
 
-    <com.hrawat.projectvision.faceDetection.FaceView
-        android:id="@+id/faceView"
+    <com.hrawat.projectvision.faceDetection.faceDetails.CameraSourcePreview
+        android:id="@+id/preview"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1"/>
+        android:layout_height="match_parent">
+
+        <com.hrawat.projectvision.faceDetection.faceDetails.GraphicOverlay
+            android:id="@+id/faceOverlay"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"/>
+    </com.hrawat.projectvision.faceDetection.faceDetails.CameraSourcePreview>
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -33,4 +38,5 @@
             android:text="match"
             />
     </LinearLayout>
-</LinearLayout>
+</FrameLayout>
+
