--- a/app/src/main/res/layout-land/main.xml
+++ b/app/src/main/res/layout-land/main.xml
@@ -1,42 +1,53 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout
+<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/topLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:keepScreenOn="true"
     android:orientation="vertical">
 
-    <com.hrawat.projectvision.faceDetection.camera_util.CameraSourcePreview
-        android:id="@+id/preview"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
-
-        <com.hrawat.projectvision.faceDetection.camera_util.GraphicOverlay
-            android:id="@+id/faceOverlay"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"/>
-    </com.hrawat.projectvision.faceDetection.camera_util.CameraSourcePreview>>
-
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:gravity="center"
-        android:orientation="horizontal">
+        android:layout_height="0dp"
+        android:layout_weight="1">
 
-        <Button
-            android:id="@+id/btn_capture"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="capture"
-            />
+        <com.hrawat.projectvision.faceDetection.camera_util.CameraSourcePreview
+            android:id="@+id/preview"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
 
-        <Button
-            android:id="@+id/btn_match"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="match"
-            />
+            <com.hrawat.projectvision.faceDetection.camera_util.GraphicOverlay
+                android:id="@+id/faceOverlay"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"/>
+        </com.hrawat.projectvision.faceDetection.camera_util.CameraSourcePreview>
     </LinearLayout>
-</FrameLayout>
 
+
+    <HorizontalScrollView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:padding="4dp">
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:orientation="horizontal">
+
+            <ImageView
+                android:id="@+id/img_sunglasses_clear"
+                android:layout_width="42dp"
+                android:layout_height="42dp"
+                android:src="@drawable/ic_sunglasses_clear"
+                />
+
+            <ImageView
+                android:layout_marginLeft="8dp"
+                android:id="@+id/img_sunglasses"
+                android:layout_width="42dp"
+                android:layout_height="42dp"
+                android:src="@drawable/ic_sunglasses"
+                />
+        </LinearLayout>
+    </HorizontalScrollView>
+</LinearLayout>
