--- a/app/src/main/res/layout/main.xml
+++ b/app/src/main/res/layout/main.xml
@@ -23,25 +23,31 @@
         </com.hrawat.projectvision.faceDetection.camera_util.CameraSourcePreview>
     </LinearLayout>
 
-    <LinearLayout
+
+    <HorizontalScrollView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@android:color/black"
+        android:padding="4dp">
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:gravity="center"
         android:orientation="horizontal">
 
-        <Button
-            android:id="@+id/btn_capture"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="capture"
+        <ImageView
+            android:id="@+id/img_sunglasses_clear"
+            android:layout_width="66dp"
+            android:layout_height="66dp"
+            android:src="@drawable/ic_sunglasses_clear"
             />
 
-        <Button
-            android:id="@+id/btn_match"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="match"
+        <ImageView
+            android:layout_marginLeft="8dp"
+            android:id="@+id/img_sunglasses"
+            android:layout_width="66dp"
+            android:layout_height="66dp"
+            android:src="@drawable/ic_sunglasses"
             />
     </LinearLayout>
+    </HorizontalScrollView>
 </LinearLayout>
